--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>top.kjwang</groupId>
-    <artifactId>java-exception-learning</artifactId>
+    <artifactId>java-advance</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
